# social_navigation_analysis_old

./: .gitignore  README.md  env.yml  setup.cfg
data/: snt_details.xlsx  snt_sorted-options_adolescent.xlsx  snt_sorted-options_schema.xlsx  snt_sorted-options_standard_mem50_n81.xlsx  snt_validated_sorted_mem50_n81.xlsx  snt_versions_10.2022.xlsx
data/CSVs/: Prolific-initial_older-format.csv  Prolific-replication.csv  Schema-Day01.csv  Schema-Day01_older-format.csv
data/example_csvs/: Adolescent_pilot.csv
data/example_subject/: snt_18001.xlsx  snt_18001_behavior.xlsx  snt_18001_timing.xlsx  snt_583_narrative_data.xlsx
social_navigation_analysis/: __init__.py  _dev_behav.ipynb  _dev_parsing.ipynb  dev_behav.ipynb  dev_parsing.ipynb  example.ipynb  example_analysis.ipynb  fMRI_polar-model.ipynb  info.py  my_decorators.py  preprocess.py  run_preprocessing.ipynb  run_preprocessing.py  sort_pavlovia_data.ipynb  utils.py
social_navigation_task/: Untitled.ipynb  __init__.py  _dev_csv_parsing.ipynb  behav-geom_dev.ipynb  csv_parsing.ipynb  dev.ipynb  example.ipynb  info.py  preprocess.py  snt_behav-geom_dev.ipynb  sort_pavlovia_csvs.ipynb  utils.py
social_navigation_task/Behavior/: snt_583_behavior.xlsx  snt_None_behavior.xlsx
tests/: profile_test.py  test_ComputeBehavior2.py  test_angles.py  test_behavior.py  test_behavior_orig.py  test_shapely_scipy_convexhull.py  test_utils.py  unit_tests.txt  unit_tests_dev.ipynb
tests/Behavior/: snt_None_behavior.xlsx
