[metadata]
name = social_navigation_task
version = 0.0.7
author = Matthew G. Schafer
description = Information and tools specifically relevant to the Social Navigation Task
long_description = Placeholder
url = https://github.com/matty-gee/social_navigation_task
keywords = snt, behavior, analysis

[options]
packages = find:
# dependency_links = toolbox @ git+https://github.com/matty-gee/toolbox#egg
install_requires = 
    "git+https://github.com/matty-gee/toolbox.git"
    patsy
    pathlib
    pandas
    numpy 
    seaborn
    matplotlib
    scipy
    sklearn
    Pillow