[metadata]
name = social_navigation_task
version = 0.0.15
author = Matthew G. Schafer
description = Information and tools specifically relevant to the Social Navigation Task
long_description = Placeholder
url = https://github.com/matty-gee/social_navigation_task
keywords = snt, behavior, analysis

[options]
packages = find:
install_requires = 
    patsy
    pathlib
    pandas
    numpy 
    seaborn
    matplotlib
    openpyxl # needed for pd.read_excel sometimes
    scipy
    sklearn
    Pillow